# GPU_Autorouter

./: .aiexclude  .gitignore  CMakeLists.txt  toolchain-mingw-x86_64.cmake
.devcontainer/: Dockerfile  devcontainer.json
src/core/: AutorouterCore.cpp  AutorouterCore.h  CMakeLists.txt  PcbData.cpp  PcbData.h  PcbParser.cpp  PcbParser.h  RoutingGrid.cpp  RoutingGrid.h
src/gui/: AutorouterDialog.cpp  AutorouterDialog.h  CMakeLists.txt  LayerColors.cpp  LayerColors.h  LayerControlPanel.cpp  LayerControlPanel.h  PcbCanvas.cpp  PcbCanvas.h  PcbPanel.cpp  PcbPanel.h  main.cpp
src/kicad/: CMakeLists.txt  KicadPcb.cpp  KicadPcb.h  Sexp.h  SexpParser.cpp  SexpParser.h
tests/: CMakeLists.txt  main.cpp
tests/pcb_files/: credits.txt  description.txt  progress-log.txt
tests/pcb_files/empty_board/: empty_board.kicad_pcb
